--- a/css/index.css
+++ b/css/index.css
@@ -966,6 +966,7 @@ a:hover {
 
 .index_time_to_buy_left {
     position: relative;
+    float: left;
     overflow: hidden;
 }
 
@@ -1010,6 +1011,7 @@ a:hover {
 }
 
 .index_time_to_buy_left_txt2 {
+    margin-top: 5px;
     font-size: 12px;
 }
 
@@ -1764,4 +1766,142 @@ li .tit_spc:hover {
     text-decoration: line-through;
     color: #999;
     font-size: 12px;
+}
+.index_chart_list_center {
+    float: left;
+    background-color: #fff;
+    margin-left: 10px;
+}
+.index_chart_list_center > a {
+    position: relative;
+    display: block;
+    width: 390px;
+    height: 280px;
+}
+.index_chart_list_center > a > img {
+    width: 200px;
+    height: 260px;
+}
+.index_chart_list_txt {
+    float: right;
+    width: 175px;
+    margin-top: 40px;
+}
+.index_chart_list_tit {
+    margin: 10px 8px;
+    font-size: 16px;
+    color: #333;
+    font-weight: 700;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.index_chart_list_txt > span {
+    font-size: 12px;
+    margin-top: 15px;
+}
+.index_chart_p1 {
+    color: #cc9952;
+    font-weight: 700;
+    font-size: 12px;
+}
+.index_chart_p2 {
+    color: #999;
+    font-size: 12px;
+}
+.index_list_btn {
+    width: 80px;
+    line-height: 28px;
+    text-align: center;
+    padding: 0 8px;
+    border: 1px solid #cc9952;
+    margin-top: 20px;
+    border-radius: 100px;
+    color: #cc9952;
+    font-size: 12px;
+}
+.index_chart_list_center:hover {
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,.15);
+}
+
+.index_chart_list_center:hover .index_list_btn {
+    background-color: #cc9952;
+    color: #fff;
+}
+
+.index_chart_number {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 43px;
+    height: 23px;
+    line-height: 23px;
+    text-align: center;
+    color: #fff;
+    font-weight: 700;
+    font-size: 12px;
+    font-style: normal;
+    background: url(../images/spriteA.png)  0 -404px no-repeat;
+}
+.index_chart_list_right {
+    float: right;
+    width: 400px;
+    margin-left: 8px;
+}
+.index_chart_list_right > a {
+    float: left;
+    position: relative;
+    width: 185px;
+    height: 132px;
+    background-color: #fff;
+    text-align: center;
+    overflow: hidden;
+
+}
+.index_chart_list_right > a:first-child {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+}
+.index_chart_list_right > a:nth-child(2) {
+    margin-bottom: 15px;
+}
+.index_chart_list_right > a:nth-child(3) {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.index_chart_num {
+    position: absolute;
+    top: 10px;
+    left: 7px;
+    color: #cc9952;
+    font-weight: 700;
+    line-height: 12px;
+    font-size: 12px;
+    font-style: normal;
+}
+.index_chart_list_right_hide {
+    position: absolute;
+    left: 0;
+    bottom: -55px;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 12px;
+    background-color: rgba(255,255,255,.8);
+    transition: all 0.5s;
+}
+.index_chart_list_right_hide > p {
+    color: #666;
+    line-height: 12px;
+    margin-bottom: 6px;
+}
+.index_chart_p2 > span {
+    font-weight: 700;
+}
+.index_chart_list_right > a:hover {
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,.15);
+}
+.index_chart_list_right > a:hover .index_chart_list_right_hide {
+    bottom: 0;
 }
