--- a/css/seckill.css
+++ b/css/seckill.css
@@ -75,7 +75,7 @@
 }
 .m-content {
     width: 1200px;
-    height: 8200px;
+    /* height: 8200px; */
     margin:10px auto;
    
 }
@@ -173,7 +173,7 @@
 .byStages{
     display: inline-block;
     font-size: 12px;
-    color: #c6a461;
+    color: #c6a461 !important;
     padding: 3px;
     border: 1px solid #c6a461;
 }
